--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,16 @@
 			<artifactId>commons-codec</artifactId>
 			<version>1.12</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.20</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jfree</groupId>
+			<artifactId>jfreechart</artifactId>
+			<version>1.5.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
